--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@atproto/lex": "^0.0.6",
     "@atproto/oauth-client-node": "^0.3.13",
+    "@atproto/syntax": "^0.4.2",
+    "@atproto/tap": "^0.0.2",
     "better-sqlite3": "^12.5.0",
     "kysely": "^0.28.9",
     "next": "16.0.10",
